# xrootd-prefs-plugins

./: .gitignore  CMakeLists.txt  xrootd-prefs-plugins.spec
cmake/: FindXrootd.cmake
src/: CMakeLists.txt  PrefAllow.cc  PrefAllow.hh  PrefClient.cc  PrefClient.hh  PrefDeny.cc  PrefDeny.hh  PrefMatchTopDomain.cc  PrefMatchTopDomain.hh  PrefOne.cc  PrefOne.hh  PrefTrivial.cc  PrefTrivial.hh
